config/openshift/vsphere/vspheretest-dc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Route
  metadata:
    name: vspheretest
  spec:
    to:
      kind: Service
      name: vspheretest
- apiVersion: v1
  kind: Service
  metadata:
    name: vspheretest
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      name: vspheretest
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: vspheretest
  spec:
    template:
      metadata:
        labels:
          name: vspheretest
      spec:
        containers:
          - name: vspheretest
            image: "${image}"
            ports:
              - containerPort: 8080
                protocol: TCP
            readinessProbe:
              httpGet:
                path: /health/
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
            livenessProbe:
              httpGet:
                path: /ping/
                port: 8080
              initialDelaySeconds: 10
              failureThreshold: 5
              periodSeconds: 10
              timeoutSeconds: 1
            volumeMounts:
              - mountPath: /app/web/mnt
                name: vspheretest-pv
        volumes:
            - name: vspheretest-pv
              persistentVolumeClaim:
                claimName: vspheretest-pvc
    replicas: 1
    strategy:
      type: Recreate
    paused: false
    revisionHistoryLimit: 2
    minReadySeconds: 0
